--- a/app/SeqMine/src/app/components/login/login.component.html
+++ b/app/SeqMine/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <fieldset>
-      <h3 class="text-center mt-5">Login</h3>
+    <h3 class="text-center mt-5">Login</h3>
     <form
       class="row d-flex justify-content-center"
       [formGroup]="loginForm"
@@ -65,6 +65,7 @@
 </div>
 
 <div class="text-center" *ngIf="this.validationErrorMessage">
-  <p class="text-danger" style="font-size: 2rem;">{{ this.validationErrorMessage }}</p>
+  <p class="text-danger" style="font-size: 2rem">
+    {{ this.validationErrorMessage }}
+  </p>
 </div>
-
