--- a/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
+++ b/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
@@ -1,5 +1,9 @@
 <div class="container">
-  <div class="row justify-content-center">
+    <div *ngIf="internalErrorMsg" class="text-center text-danger">
+        <h3>{{ internalErrorMsg }}</h3>
+    </div>
+
+  <div *ngIf="!internalErrorMsg" class="row justify-content-center">
     <form class="col-6" [formGroup]="sequenceManageForm">
       <fieldset>
         <div *ngIf="this.isModifyFileMode; else modifyLegend">
