--- a/app/SeqMine/src/app/components/header/header.component.css
+++ b/app/SeqMine/src/app/components/header/header.component.css
@@ -1,3 +1,12 @@
 .navbar-brand > img {
     max-width: 6rem;
 }
+
+
+#logged-in-profile-tag{
+    gap: 2rem;
+}
+
+#logged-in-profile-tag > p > img {
+    max-width: 4rem;
+}
