--- a/app/SeqMine/src/app/components/user-manage/user-manage.component.html
+++ b/app/SeqMine/src/app/components/user-manage/user-manage.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-  <div class="row justify-content-center">
+
+    <div *ngIf="internalErrorMsg" class="text-center text-danger">
+        <h3>{{ internalErrorMsg }}</h3>
+    </div>
+
+  <div *ngIf="!internalErrorMsg" class="row justify-content-center">
     <form [formGroup]="userManageForm" class="col-6">
       <fieldset>
         <div *ngIf="this.isAddUserMode; else modifyLegend">
