--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -6,101 +6,113 @@
   <div class="row">
     <h3
       *ngIf="getUserDeletionStatus()"
-      class="text-center"
+      class="text-center text-success"
       id="success-deletion-message"
     >
       User "{{ recentlyDeletedUser }}" has successfully been deleted.
     </h3>
     <h3
       *ngIf="getUserDeletionStatus() === false"
-      class="text-center"
+      class="text-center text-danger"
       id="failed-deletion-message"
     >
       Failed to delete "{{ recentlyDeletedUser }}".<br />
       Something went wrong.
     </h3>
-    <form [formGroup]="searchBarForm" class="d-flex my-3">
-      <div class="col-6 text-center form-group d-flex align-items-center">
-        <input
-          id="login-username"
-          type="text"
-          formControlName="searchTerm"
-          class="form-control"
-          placeholder="Term to search .."
-        />
-      </div>
-      <div>
-        <button
-          class="btn btn-m btn-info btn-md mx-2"
-          type="button"
-          (click)="searchByTerm(this.searchBarForm.get('searchTerm')?.value)"
-        >
-          SEARCH
-        </button>
-      </div>
-    </form>
-    <pagination-controls (pageChange)="cp = $event"></pagination-controls>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Username</th>
-          <th scope="col">Role</th>
-          <th scope="col">Password</th>
-          <th scope="col">E-mail</th>
-          <th scope="col">First name</th>
-          <th scope="col">Last name</th>
-          <th scope="col">Registration date</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr
-          *ngFor="
-            let user of this.usersToDisplay
-              | paginate
-                : { itemsPerPage: this.rowNumberLimit, currentPage: cp }
-          "
-          scope="row"
-        >
-          <th scope="row">{{ user.id }}</th>
-          <td>{{ user.username }}</td>
-          <td>{{ user.role }}</td>
-          <td>{{ user.password }}</td>
-          <td>{{ user.email }}</td>
-          <td>{{ user.firstName }}</td>
-          <td>{{ user.lastName }}</td>
-          <td>
-            {{
-              user.registrationDate
-                .toISOString()
-                .split("T")
-                .join(" ")
-                .split(".")[0]
-            }}
-          </td>
-          <td>
-            <div class="d-flex justify-content-around">
-              <button
-                type="button"
-                class="btn btn-primary"
-                (click)="goToUserManage(user.id)"
-              >
-                Modify
-              </button>
 
-              <button
-                type="button"
-                class="btn btn-danger"
-                (click)="requireConfirmation(user.id, user.username)"
-              >
-                Delete
-              </button>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <pagination-controls (pageChange)="cp = $event"></pagination-controls>
+    <h3
+      *ngIf="errorMsg"
+      class="text-center text-danger"
+      id="failed-deletion-message"
+    >
+      {{ errorMsg }}
+    </h3>
+
+    <div *ngIf="!errorMsg">
+      <form [formGroup]="searchBarForm" class="d-flex my-3">
+        <div class="col-6 text-center form-group d-flex align-items-center">
+          <input
+            id="login-username"
+            type="text"
+            formControlName="searchTerm"
+            class="form-control"
+            placeholder="Term to search .."
+          />
+        </div>
+        <div>
+          <button
+            class="btn btn-m btn-info btn-md mx-2"
+            type="button"
+            (click)="searchByTerm(this.searchBarForm.get('searchTerm')?.value)"
+          >
+            SEARCH
+          </button>
+        </div>
+      </form>
+      <pagination-controls (pageChange)="cp = $event"></pagination-controls>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Username</th>
+            <th scope="col">Role</th>
+            <th scope="col">Password</th>
+            <th scope="col">E-mail</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">Registration date</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="
+              let user of this.usersToDisplay
+                | paginate
+                  : { itemsPerPage: this.rowNumberLimit, currentPage: cp }
+            "
+            scope="row"
+          >
+            <th scope="row">{{ user.id }}</th>
+            <td>{{ user.username }}</td>
+            <td>{{ user.role }}</td>
+            <td>{{ user.password }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName }}</td>
+            <td>
+              {{
+                user.registrationDate
+                  .toISOString()
+                  .split("T")
+                  .join(" ")
+                  .split(".")[0]
+              }}
+            </td>
+            <td>
+              <div class="d-flex justify-content-around">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  (click)="goToUserManage(user.id)"
+                >
+                  Modify
+                </button>
+
+                <button
+                  type="button"
+                  class="btn btn-danger"
+                  (click)="requireConfirmation(user.id, user.username)"
+                >
+                  Delete
+                </button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <pagination-controls (pageChange)="cp = $event"></pagination-controls>
+    </div>
   </div>
 </div>
