--- a/app/SeqMine/src/app/components/file-storage-table/file-storage-table.component.html
+++ b/app/SeqMine/src/app/components/file-storage-table/file-storage-table.component.html
@@ -83,7 +83,7 @@
           </td>
           <td>{{ file.uploadedBy }}</td>
           <td>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex justify-content-around" style="gap: 1rem;">
               <button type="button" class="btn btn-info">
                 <a [href]="getDownloadLink(file.id)" style="color: inherit">
                   Download
