search bug in user table solved

--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -42,7 +42,7 @@
         <div>
           <button
             class="btn btn-m btn-info btn-md mx-2"
-            type="button"
+            type="submit"
             (click)="searchByTerm(this.searchBarForm.get('searchTerm')?.value)"
           >
             SEARCH
